@startuml




package vista {
        class VentanaInicio
        class VentanaLeaderboard
        class VentanaPregunta
}

package Controlador {
        class ControladorCrearJugadores
        class ControladorMostrarLeaderboard
        class ControladorMostrarPregunta
}

package modelo {
    class Juego
}

Controlador --> modelo: ""
Controlador -> vista: ""
vista --> modelo
Juego ---> vista: "uses"

@enduml
